--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 .navbar {
   height: 100vh;
-  margin: 0px;
   background-color: gray;
   display: flex;
   flex-direction: column;
@@ -46,20 +45,10 @@
   color: gray;
 }
 
-#social-networks {
-  text-decoration: none;
-}
-
 #nav-items {
-  color: white;
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0px;
-}
-
-a {
-  text-decoration: none;
-  color: white;
 }
 
 #conhecimentos {
@@ -68,4 +57,8 @@ a {
 
 #objetivos {
   font-size: 25px;
+}
+
+body {
+  margin: 0px;
 }
