--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   height: 100vh;
   margin: 0px;
   grid-template-columns: minmax(100px, 17%) 1fr;
+  margin-bottom: -10px;
 }
 
 .navbar {
@@ -52,9 +53,9 @@
 }
 
 #conhecimentos {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 #objetivos {
-  font-size: 25px;
+  font-size: 20px;
 }
