--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ a {
   color: white;
 }
 
-a:hover {
-  background: rgba(255, 255, 255, 0.253);
+.button:hover {
+  background-color: rgba(255, 255, 255, 0.253);
   transition: all 0.5s;
 }
