--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0px;
+  font-variant: small-caps;
 }
 
 #conhecimentos {
