--- a/css/style.css
+++ b/css/style.css
@@ -69,16 +69,22 @@ body {
 .active {
   background-color: rgba(255, 255, 255, 0.253);
   font-weight: bolder;
+  font-size: 17px;
 }
 
 .active:hover {
   transition: all 0.5s;
-  font-size: 17px;
 }
 
 .social-icon {
   width: 50px;
   height: 50px;
+}
+
+.social-icon:hover {
+  width: 55px;
+  height: 55px;
+  transition: 0.2s;
 }
 
 @font-face {
