--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,24 @@
 }
 
 body {
+  background-image: url(/assets/Background.png);
+  background-size: cover;
   overflow: hidden;
   margin: 0px;
 }
 
-/*GRID*/
+/* GRID */
+
 .parent {
-  display: grid;
-  height: 100vh;
-  margin: 0px;
-  grid-template-columns: minmax(100px, 17%) 1fr;
-  background-image: url(/assets/Background.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+  display: flex;
+  flex-direction: row;
 }
 
 .navbar {
+  width: 17%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.555);
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,28 +29,30 @@ body {
 }
 
 .content {
+  width: 83%;
   height: 100vh;
   margin: 0px;
-  padding: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 10px;
 }
 
 /*NAVBAR*/
 
-#avatar1 {
+.avatar {
+  border-radius: 200px;
   width: 150px;
   height: 150px;
-  border-radius: 200px;
-  margin: 0px;
 }
 
-#nav-items {
+.nav-menu {
+  color: #ffffff;
+  align-items: center;
   text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin: 0px;
+  width: 100%;
   font-variant: small-caps;
+  font-size: 17px;
 }
 
 a {
@@ -59,28 +61,31 @@ a {
 }
 
 .button:hover {
-  background-color: rgba(255, 255, 255, 0.253);
-  transition: all 0.5s;
-  font-size: 17px;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: 0.5s;
+  font-size: 19px;
 }
 
 .active {
-  background-color: rgba(255, 255, 255, 0.253);
+  background-color: rgba(255, 255, 255, 0.2);
+  font-size: 19px;
   font-weight: bolder;
-  font-size: 17px;
-}
-
-.active:hover {
-  transition: all 0.5s;
 }
 
 /*CONTENT*/
 
-#profile-name-2 {
-  color: #535353;
+.content {
+  font-family: farewell angelina;
+  font-size: 16px;
 }
 
-#city {
+/*SOBRE*/
+
+.profile-name {
+  font-size: 40px;
+}
+
+.emphasis {
   color: #535353;
 }
 
@@ -93,31 +98,40 @@ a {
 .social-icon:hover {
   width: 55px;
   height: 55px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
-#content {
-  font-family: farewell angelina;
+.city {
+  color: #535353;
 }
 
 /*CONHECIMENTOS*/
 
-.conhecimentos {
-  font-family: farewell angelina;
-  font-size: 20px;
+th {
+  font-size: 22px;
+  text-align: left;
+  border-bottom: 1px solid gray;
+}
+
+td {
+  width: 27%;
+}
+
+.list-knowledge {
+  font-size: 17px;
 }
 
 .iframe {
+  height: 300px;
   width: 300px;
-  height: 220px;
-  position: fixed;
-  left: 56%;
-  top: 39%;
 }
 
 /*OBJETIVOS*/
 
-.objetivos {
-  font-family: farewell angelina;
-  font-size: 20px;
+h2 {
+  border-bottom: 1px solid gray;
+}
+
+.objective-list {
+  font-size: 16px;
 }
